{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 321,
  "lineage": "e6747cb9-0a71-f1ad-de62-3344d8c8727c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:targetgroup/nc-ce-load-balancing-vpc-tg/35017b179bfcbbef-20260310200225789600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:targetgroup/nc-ce-load-balancing-vpc-tg/35017b179bfcbbef",
            "target_id": "i-0f034b79132987063"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_instance.web",
            "module.networking.aws_lb_target_group.app",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb260c4d5475b901",
            "arn": "arn:aws:ec2:eu-west-2:746669235580:instance/i-0f034b79132987063",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f034b79132987063",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfc01c73b52b966f",
            "private_dns": "ip-10-0-1-138.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.138",
            "public_dns": "ec2-35-177-196-123.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.196.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a1260604d344fc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d2eb2b4b65bd09d",
            "tags": {
              "Name": "app-instance"
            },
            "tags_all": {
              "Name": "app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027fb04dd722f7af9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:internet-gateway/igw-07470cc0719a8d786",
            "id": "igw-07470cc0719a8d786",
            "owner_id": "746669235580",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-igw"
            },
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:loadbalancer/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35",
            "arn_suffix": "app/nc-ce-load-balancing-vpc-alb/49725846511d0f35",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nc-ce-load-balancing-vpc-alb-1141211287.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:loadbalancer/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nc-ce-load-balancing-vpc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-027fb04dd722f7af9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d2eb2b4b65bd09d"
              },
              {
                "subnet_id": "subnet-05ea71d9446d8caba"
              }
            ],
            "subnets": [
              "subnet-02d2eb2b4b65bd09d",
              "subnet-05ea71d9446d8caba"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-alb"
            },
            "vpc_id": "vpc-0f05930394d323c06",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:listener/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35/d47fffc17989afd1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:listener/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35/d47fffc17989afd1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:loadbalancer/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_lb.main",
            "module.networking.aws_lb_target_group.app",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:listener/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35/9e89ff752f12ccee",
            "certificate_arn": "arn:aws:acm:eu-west-2:746669235580:certificate/98e9dbd1-8f96-4681-a501-4bf00e923cab",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:targetgroup/nc-ce-load-balancing-vpc-tg/35017b179bfcbbef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:listener/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35/9e89ff752f12ccee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:loadbalancer/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_lb.main",
            "module.networking.aws_lb_target_group.app",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:targetgroup/nc-ce-load-balancing-vpc-tg/35017b179bfcbbef",
            "arn_suffix": "targetgroup/nc-ce-load-balancing-vpc-tg/35017b179bfcbbef",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:746669235580:targetgroup/nc-ce-load-balancing-vpc-tg/35017b179bfcbbef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:746669235580:loadbalancer/app/nc-ce-load-balancing-vpc-alb/49725846511d0f35"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nc-ce-load-balancing-vpc-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-tg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07470cc0719a8d786",
            "id": "r-rtb-01d66a172f5c5ea2a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d66a172f5c5ea2a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:route-table/rtb-01d66a172f5c5ea2a",
            "id": "rtb-01d66a172f5c5ea2a",
            "owner_id": "746669235580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07470cc0719a8d786",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eaabb8451a83105",
            "route_table_id": "rtb-01d66a172f5c5ea2a",
            "subnet_id": "subnet-02d2eb2b4b65bd09d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066061d1f579b5c5f",
            "route_table_id": "rtb-01d66a172f5c5ea2a",
            "subnet_id": "subnet-05ea71d9446d8caba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:security-group/sg-027fb04dd722f7af9",
            "description": "Allow HTTP/HTTPS inbound to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027fb04dd722f7af9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nc-ce-load-balancing-vpc-alb-sg",
            "name_prefix": "",
            "owner_id": "746669235580",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:subnet/subnet-0c40bdd0c7ed57d64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c40bdd0c7ed57d64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669235580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:subnet/subnet-002c1689f52c5364d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c1689f52c5364d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669235580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:subnet/subnet-0594ac52901235529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0594ac52901235529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669235580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-private-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:subnet/subnet-02d2eb2b4b65bd09d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d2eb2b4b65bd09d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669235580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-public-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:subnet/subnet-05ea71d9446d8caba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ea71d9446d8caba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746669235580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-public-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nc-ce-load-balancing-vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-0f05930394d323c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:746669235580:vpc/vpc-0f05930394d323c06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-03250ca0de962d15f",
            "default_route_table_id": "rtb-04d04ed3f30a3f7fc",
            "default_security_group_id": "sg-00d0abe2587da0f2f",
            "dhcp_options_id": "dopt-002c59937e9569ff6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f05930394d323c06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d04ed3f30a3f7fc",
            "owner_id": "746669235580",
            "tags": {
              "Name": "nc-ce-load-balancing-vpc"
            },
            "tags_all": {
              "Name": "nc-ce-load-balancing-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}